# dugong

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.claude/commands/kiro/: spec-impl.md
.kiro/settings/rules/: impl-execution.md
.kiro/specs/mesh-poly/: requirements.md  spec.json
.kiro/specs/mesh-primitive/: design.md  requirements.md  research.md  spec.json
.kiro/specs/types-dimension/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/types-field-value/: requirements.md  spec.json  tasks.md
.kiro/specs/types-tensor/: design.md  requirements.md  spec.json
.kiro/steering/: cfd-conventions.md  error-handling.md  product.md  rust-practices.md  structure.md  tech.md
apps/simple-solver/: Cargo.toml
apps/simple-solver/src/: main.rs
crates/discretization/: Cargo.toml
crates/discretization/src/: lib.rs
crates/fields/: Cargo.toml
crates/fields/src/: lib.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: error.rs  geometry.rs  lib.rs  primitive_mesh.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/solvers/: Cargo.toml
crates/solvers/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  traits.rs
crates/types/src/tensor/: cross_ops.rs  ops.rs  special.rs  types.rs
crates/types/src/traits/: field_value.rs  has_div.rs  has_grad.rs
docs-dev/: implementation-plan.md
docs-dev/spec-ideas/: crate_design.md  mesh_architecture.md  rust_cfd_mesh_field_parallel.md  rust_cfd_object_registry.md  rust_cfd_open_questions.md  rust_cfd_overview.md  rust_cfd_runtime_selection.md  rust_cfd_tensor_types.md  rust_cfd_types_and_notation.md
